fixed testimonials to wrap to next line

--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ h1, h2 {
 	display: flex;
 	height: auto;
 	justify-content: space-around;
+	flex-wrap: wrap;
 
 }
 
